<resources>

    <string name="app_name">Status Downloader</string>
    <string name="by_gautham">By Gautham</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="save">Save</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About</string>

    <string name="saved_files">Saved Files</string>
    <string name="no_files_found">No Files Found</string>
    <string name="gautham">Gautham</string>
    <string name="app_version">App Version</string>
    <string name="mail_id">gauthamnadar12@gmail.com</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="telegram_link">https://t.me/Mellow04</string>
    <string name="developer">Developer</string>
    <string name="check_for_update">Check for update</string>
    <string name="cant_find_whatsapp_dir">Cant find WhatsApp Dir</string>

</resources>
