<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/c1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_24sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center"
                android:src="@drawable/my_pic"
                app:civ_border_width="4dp"
                app:civ_border_color="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:gravity="center"
                android:layout_marginTop="@dimen/_6sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gautham"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sdp"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:cardCornerRadius="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:src="@drawable/ic_info_outline"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_6sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version"
                        android:gravity="start"
                        android:textColor="@color/white"
                        style="@android:style/TextAppearance.Medium"/>

                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version"
                        android:gravity="start"
                        android:textColor="@android:color/darker_gray"
                        style="@android:style/TextAppearance.Small"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:cardCornerRadius="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:src="@drawable/ic_mail_outline"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_6sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:gravity="start"
                        android:textColor="@color/white"
                        style="@android:style/TextAppearance.Medium"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mail_id"
                        android:gravity="start"
                        android:textColor="@android:color/darker_gray"
                        style="@android:style/TextAppearance.Small"
                        android:textIsSelectable="true"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:cardCornerRadius="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:src="@drawable/ic_telegram"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_6sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:gravity="start"
                        android:textColor="@color/white"
                        style="@android:style/TextAppearance.Medium"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/telegram_link"
                        android:gravity="start"
                        android:textColor="@android:color/darker_gray"
                        style="@android:style/TextAppearance.Small"
                        android:textIsSelectable="true"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
